syntax = "proto3";

package api.rebac.v1;

import "google/api/annotations.proto";
import "rebac/v1/relationships.proto";

option go_package = "ciam-rebac/api/rebac/v1;v1";
option java_multiple_files = true;
option java_package = "api.rebac.v1";

service Lookup {
    rpc Subjects(LookupSubjectsRequest) returns (stream LookupSubjectsResponse) {
        option (google.api.http) = {
            get: "/v1/subjects"
        };
    };
}

message LookupSubjectsRequest {
    string subject_type = 1;
    string subject_relation = 2;
    string relation = 3;
    ObjectReference object = 4;
    optional uint32 limit = 5;
    optional string continuation_token = 6;
}

message LookupSubjectsResponse {
    SubjectReference subject = 1;
    bool has_more = 2;
    string continuation_token = 3;
}